--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -8,6 +8,11 @@ grails:
             # Whether to translate GORM events into Reactor events
             # Disabled by default for performance reasons
             events: false
+    cors:
+        enabled: true
+        allowedOrigins:
+            - http://localhost:8080
+            - http://localhost:8081
 info:
     app:
         name: '@info.app.name@'
