--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -10,6 +10,7 @@ grails:
             events: false
     cors:
         enabled: true
+        allowCredentials: true
         allowedOrigins:
             - http://localhost:8080
             - http://localhost:8081
