--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,14 @@ repositories {
     }
     maven { url "https://repo.grails.org/grails/core" }
     maven { url "https://jitpack.io" }
+    maven {
+        name "public"
+        credentials {
+            username mavenUser
+            password mavenPassword
+        }
+        url "http://nexus.xsio.cn/repository/xsio-test"
+    }
     mavenCentral()
 }
 
@@ -110,6 +118,7 @@ dependencies {
     compile "org.grails.plugins:events"
     compile "org.grails.plugins:hibernate5"
     compile "org.hibernate:hibernate-core:5.4.18.Final"
+    compile "com.convertlab:chatgpt-spring-boot-starter:1.0.1"
     compile "org.grails.plugins:gsp"
     compileOnly "io.micronaut:micronaut-inject-groovy"
     console "org.grails:grails-console"
